<resources>
    <string name="app_name">LearningApp</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rePassword">RePassword</string>
    <string name="home_learningStyle">"Learning Style: "</string>
    <string name="cont">Continue</string>
    <string name="logout">LogOut</string>
    <string name="stats">Statistic</string>
    <string name="progress">Progress:</string>
    <string name="chapter1">Chapter 1</string>
    <string name="chapter2">Chapter 2</string>
    <string name="chapter3">Chapter 3</string>
    <string name="theory">Theory</string>
    <string name="test">Test</string>
    <string name="none">none</string>
    <string name="finish">Finish</string>
    <string name="chapter0">Chapter 0</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string-array name="learning_styles">
        <item></item>
        <item>Optical</item>
        <item>Acoustic</item>
        <item>Kinematic</item>
    </string-array>
</resources>