<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test_activity"
    android:background="#E1E1E1">

    <ImageView
        android:id="@+id/img_bottomBc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_image" />

    <ImageView
        android:id="@+id/img_topMainBc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_image"/>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_bold"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:text="Traditionally, the Ancient Greek period was "
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_topMainBc" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/purple_btn"
        android:fontFamily="@font/lato_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_btn"
        android:fontFamily="@font/lato_bold"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gray_btn"
        android:fontFamily="@font/lato_bold"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/lato_bold"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:text="0/5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/img_topMainBc"
        app:layout_constraintTop_toTopOf="@+id/img_topMainBc" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question">

        <RadioButton
            android:id="@+id/rbtn_answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/lato_bold"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:text="RadioButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="349dp" />

        <RadioButton
            android:id="@+id/rbtn_answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:text="RadioButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="349dp" />

        <RadioButton
            android:id="@+id/rbtn_answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:text="RadioButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="349dp" />

        <RadioButton
            android:id="@+id/rbtn_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:text="RadioButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="349dp" />

    </RadioGroup>




</androidx.constraintlayout.widget.ConstraintLayout>